Before publishing a pathced package @datadvance/apollo-link-state

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "lerna": "2.1.2",
-  "packages": ["packages/*", "examples/*"],
+  "packages": ["packages/*"],
   "version": "independent",
   "hoist": false
 }
